tests/compile_fail/duplicate-call.stderr
error: duplicate #[call] attribute
 --> $DIR/duplicate-call.rs:8:5
  |
8 |     #[call(capacity)]
  |     ^
